<resources>
    <string name="app_name">StuToDo_App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_buttonText">Login</string>
    <string name="signup_buttonText">Sign Up</string>
    <string name="name_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="age_hint">Age</string>
    <string name="university_hint">University</string>
    <string name="addTitle_hint">Add title</string>
    <string name="addNotes_hint">Add notes here...</string>
    <string name="currentEmailHint">Current Email</string>
    <string name="currentPasswordHint">Current Password</string>
    <string name="newEmailHint">New Email</string>
    <string name="changeEmailButtonText">Change Email</string>
    <string name="changePasswordButtonText">Change Password</string>
    <string name="change_password_or_email_title">Change Password or Email</string>
    <string name="changePasswordOrEmailMessage">You are attemping to change either your email or password. Doing so will log you out of your acount and you will have to log back in using new email or password.</string>
    <string name="changePasswordTitle">Change Password</string>
    <string name="newPasswordHint">New Password</string>
    <string name="changePasswordMessage">You are attemping to change your password. To do so please enter your current password.</string>
    <string name="deleteProfileTitle">Delete Profile</string>
    <string name="deleteProfileMessage">You are attempting to delete your profile. This action can not be undone. Please enter your email and password to continue.</string>
    <string name="deleteProfileButtonText">Delete Profile</string>
    <string name="editTaskTitle">Edit Task</string>
    <string name="updateButtonTitle">Update</string>
    <string name="taskDetailTitle">Task Detail</string>
    <string name="taskTitleLabel">Title:</string>
    <string name="taskDateLabel">Date:</string>
    <string name="taskNotesLabel">Notes:</string>
    <string name="editButtonText">Edit</string>
    <string name="deleteButtonText">Delete</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="addTaskTitle">Add Task</string>
    <string name="addTaskButtonText">Add Task</string>
    <string name="changeEmailLabel">Change Email</string>
    <string name="changeEmailMessage">You are attemping to change your email. To do so please enter your current email and password.</string>
    <string name="welcomeToStutodoLabel">Welcome to StuToDo</string>
    <string name="stutodo_welcomeMessage">where we let college students be great again.</string>
    <string name="getStartedButtonText">Get Started</string>
    <string name="ongoingTasksTitle">Tasks</string>
    <string name="historyTasksTitle">History</string>
</resources>